// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PromoCodeForm stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="max-w-md mx-auto p-6"
>
  <div
    class="flex w-full flex-col gap-2 pt-2 pb-4"
  >
    <div
      class="mb-0"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="open"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="open"
        >
          <button
            aria-controls="radix-_r_1_"
            aria-expanded="true"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start rounded-ui py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="open"
            id="radix-_r_0_"
            type="button"
          >
            <span
              class="text-left text-sm font-medium leading-5 text-card-foreground"
            >
              Enter a Promotion Code
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_0_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="open"
          id="radix-_r_1_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="px-0 pt-2 pb-2"
          >
            <form
              data-testid="promo-code-form"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="grid gap-2"
                  data-slot="form-item"
                >
                  <label
                    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                    data-error="false"
                    data-slot="form-label"
                    for="_r_2_-form-item"
                  >
                    Promo code
                  </label>
                  <div
                    class="flex gap-2"
                  >
                    <input
                      aria-invalid="false"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive focus-visible:ring-0"
                      data-slot="input"
                      id="_r_2_-form-item"
                      name="code"
                      placeholder="Promo code..."
                      value=""
                    />
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 cursor-pointer px-4"
                      data-size="default"
                      data-slot="button"
                      data-variant="secondary"
                      type="submit"
                    >
                      Apply
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeForm stories snapshot > WithAppliedCoupon story renders and matches snapshot 1`] = `
<div
  class="max-w-md mx-auto p-6"
>
  <div
    class="flex w-full flex-col gap-2 pt-2 pb-4"
  >
    <div
      class="mb-0"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="open"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="open"
        >
          <button
            aria-controls="radix-_r_4_"
            aria-expanded="true"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start rounded-ui py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="open"
            id="radix-_r_3_"
            type="button"
          >
            <span
              class="text-left text-sm font-medium leading-5 text-card-foreground"
            >
              Enter a Promotion Code
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_3_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="open"
          id="radix-_r_4_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="px-0 pt-2 pb-2"
          >
            <form
              data-testid="promo-code-form"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="grid gap-2"
                  data-slot="form-item"
                >
                  <label
                    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                    data-error="false"
                    data-slot="form-label"
                    for="_r_5_-form-item"
                  >
                    Promo code
                  </label>
                  <div
                    class="flex gap-2"
                  >
                    <input
                      aria-invalid="false"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive focus-visible:ring-0"
                      data-slot="input"
                      id="_r_5_-form-item"
                      name="code"
                      placeholder="Promo code..."
                      value=""
                    />
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 cursor-pointer px-4"
                      data-size="default"
                      data-slot="button"
                      data-variant="secondary"
                      type="submit"
                    >
                      Apply
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-1"
      data-testid="applied-coupons"
    >
      <div
        class="flex items-center justify-between py-1"
      >
        <div
          class="inline-flex items-stretch"
        >
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary [a&]:hover:bg-secondary/90 gap-1 text-xs font-semibold leading-4 text-secondary-foreground whitespace-normal break-words"
            data-slot="badge"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            SAVE10
          </span>
          <button
            aria-label="Remove SAVE10"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 size-8 h-auto w-auto px-1.5 py-0.5"
            data-size="icon-sm"
            data-slot="button"
            data-variant="secondary"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x size-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <span
          class="text-sm font-normal leading-5 text-muted-foreground text-right"
        >
          -£3.84
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeForm stories snapshot > WithCouponDiscount story renders and matches snapshot 1`] = `
<div
  class="max-w-md mx-auto p-6"
>
  <div
    class="flex w-full flex-col gap-2 pt-2 pb-4"
  >
    <div
      class="mb-0"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="open"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="open"
        >
          <button
            aria-controls="radix-_r_7_"
            aria-expanded="true"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start rounded-ui py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="open"
            id="radix-_r_6_"
            type="button"
          >
            <span
              class="text-left text-sm font-medium leading-5 text-card-foreground"
            >
              Enter a Promotion Code
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_6_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="open"
          id="radix-_r_7_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="px-0 pt-2 pb-2"
          >
            <form
              data-testid="promo-code-form"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="grid gap-2"
                  data-slot="form-item"
                >
                  <label
                    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                    data-error="false"
                    data-slot="form-label"
                    for="_r_8_-form-item"
                  >
                    Promo code
                  </label>
                  <div
                    class="flex gap-2"
                  >
                    <input
                      aria-invalid="false"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive focus-visible:ring-0"
                      data-slot="input"
                      id="_r_8_-form-item"
                      name="code"
                      placeholder="Promo code..."
                      value=""
                    />
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 cursor-pointer px-4"
                      data-size="default"
                      data-slot="button"
                      data-variant="secondary"
                      type="submit"
                    >
                      Apply
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-1"
      data-testid="applied-coupons"
    >
      <div
        class="flex items-center justify-between py-1"
      >
        <div
          class="inline-flex items-stretch"
        >
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 w-fit shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary [a&]:hover:bg-secondary/90 gap-1 text-xs font-semibold leading-4 text-secondary-foreground whitespace-normal break-words"
            data-slot="badge"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
            SAVE10
          </span>
          <button
            aria-label="Remove SAVE10"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 size-8 h-auto w-auto px-1.5 py-0.5"
            data-size="icon-sm"
            data-slot="button"
            data-variant="secondary"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-x size-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
        <span
          class="text-sm font-normal leading-5 text-muted-foreground text-right"
        >
          -£3.84
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromoCodeForm stories snapshot > WithNotApplicableCoupon story renders and matches snapshot 1`] = `
<div
  class="max-w-md mx-auto p-6"
>
  <div
    class="flex w-full flex-col gap-2 pt-2 pb-4"
  >
    <div
      class="mb-0"
      data-orientation="vertical"
      data-slot="accordion"
    >
      <div
        class="border-b last:border-b-0"
        data-orientation="vertical"
        data-slot="accordion-item"
        data-state="open"
      >
        <h3
          class="flex"
          data-orientation="vertical"
          data-state="open"
        >
          <button
            aria-controls="radix-_r_a_"
            aria-expanded="true"
            class="focus-visible:border-ring focus-visible:ring-ring flex flex-1 items-start rounded-ui py-4 text-left text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 justify-start gap-2 pt-1 pb-0 [&>svg]:text-primary"
            data-orientation="vertical"
            data-radix-collection-item=""
            data-slot="accordion-trigger"
            data-state="open"
            id="radix-_r_9_"
            type="button"
          >
            <span
              class="text-left text-sm font-medium leading-5 text-card-foreground"
            >
              Enter a Promotion Code
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </h3>
        <div
          aria-labelledby="radix-_r_9_"
          class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
          data-orientation="vertical"
          data-slot="accordion-content"
          data-state="open"
          id="radix-_r_a_"
          role="region"
          style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
        >
          <div
            class="px-0 pt-2 pb-2"
          >
            <form
              data-testid="promo-code-form"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="grid gap-2"
                  data-slot="form-item"
                >
                  <label
                    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive sr-only"
                    data-error="false"
                    data-slot="form-label"
                    for="_r_b_-form-item"
                  >
                    Promo code
                  </label>
                  <div
                    class="flex gap-2"
                  >
                    <input
                      aria-invalid="false"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-ui border bg-transparent px-3 py-1 text-base shadow-ui transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive focus-visible:ring-0"
                      data-slot="input"
                      id="_r_b_-form-item"
                      name="code"
                      placeholder="Promo code..."
                      value=""
                    />
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 py-2 has-[>svg]:px-3 cursor-pointer px-4"
                      data-size="default"
                      data-slot="button"
                      data-variant="secondary"
                      type="submit"
                    >
                      Apply
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
